@@ -15,18 +15,18 @@ my $build = Module::Build->new(
     module_name => $module,
     license => 'lgpl',
     requires => {
-        'perl'               => 5.006002,
-        'namespace::clean'   => 0,
-        'Any::Moose'         => 0,
-        'Exception::Base'    => 0,
-        'Exception::Fatal'   => 0,
-        'Test::Assert'       => 0.05,
+        'perl'                => 5.006002,
+        'namespace::function' => 0,
+        'Any::Moose'          => 0,
+        'Exception::Base'     => 0,
+        'Exception::Fatal'    => 0,
+        'Test::Assert'        => 0.05,
     },
     optional => {
     },
     build_requires => {
-        'Class::Inspector'   => 0,
-        'Test::Unit::Lite'   => 0.12,
+        'Class::Inspector'    => 0,
+        'Test::Unit::Lite'    => 0.12,
     },
     auto_configure_requires => 0,
     create_makefile_pl => 'traditional',
